terraform/modules/traefik/templates/ingress-class.yml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: traefik-cert-manager  
spec:
  controller: traefik.io/ingress-controller
