terraform/modules/traefik/templates/ingressroute-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: ${namespace}
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`${dns}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
  tls:
    secretName: dashboard-certificate
